--- a/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_citeproc/should_delete.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_citeproc/should_delete.yml
@@ -15,36 +15,32 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 405
+      code: 204
       message: ''
     headers:
       Date:
-      - Tue, 20 Nov 2018 22:24:03 GMT
-      Content-Type:
-      - application/json; charset=utf-8
+      - Wed, 21 Nov 2018 00:54:36 GMT
       Connection:
       - keep-alive
       Status:
-      - 405 Method Not Allowed
+      - 204 No Content
       Cache-Control:
       - no-cache
       Vary:
-      - Accept-Encoding, Origin
+      - Origin
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - a94185b9-c831-4c78-a478-5974721aa8bc
+      - e3fb2875-b8d2-46bd-a3fe-8e087ff34f1a
       X-Runtime:
-      - '0.012485'
-      Allow:
-      - HEAD, GET, POST, PATCH, PUT, OPTIONS
+      - '0.031193'
       X-Powered-By:
       - Phusion Passenger 5.3.7
       Server:
       - nginx/1.14.0 + Phusion Passenger 5.3.7
     body:
       encoding: ASCII-8BIT
-      string: '{"errors":[{"status":"405","title":"Method not allowed"}]}'
+      string: ''
     http_version: 
-  recorded_at: Tue, 20 Nov 2018 22:24:03 GMT
+  recorded_at: Wed, 21 Nov 2018 00:54:36 GMT
 recorded_with: VCR 3.0.3
