--- a/spec/fixtures/vcr_cassettes/metadata/metadata_citeproc/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_citeproc/delete_doi.yml
@@ -15,33 +15,32 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 404
+      code: 204
       message: ''
     headers:
       Date:
-      - Tue, 20 Nov 2018 22:16:24 GMT
-      Content-Type:
-      - application/json; charset=utf-8
+      - Wed, 21 Nov 2018 00:55:33 GMT
       Connection:
       - keep-alive
       Status:
-      - 404 Not Found
+      - 204 No Content
       Cache-Control:
       - no-cache
       Vary:
-      - Accept-Encoding, Origin
+      - Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - 9422c66a-0a3f-4c7b-bd72-51b1ee611710
+      - c5353a95-079c-4467-9652-35e72725049b
       X-Runtime:
-      - '0.007513'
+      - '0.028879'
       X-Powered-By:
       - Phusion Passenger 5.3.7
       Server:
       - nginx/1.14.0 + Phusion Passenger 5.3.7
     body:
       encoding: ASCII-8BIT
-      string: '{"errors":[{"status":"404","title":"The resource you are looking for
-        doesn''t exist."}]}'
+      string: ''
     http_version: 
-  recorded_at: Tue, 20 Nov 2018 22:16:24 GMT
+  recorded_at: Wed, 21 Nov 2018 00:55:34 GMT
 recorded_with: VCR 3.0.3
