--- a/spec/fixtures/vcr_cassettes/Mediable/create_media/should_register.yml
+++ b/spec/fixtures/vcr_cassettes/Mediable/create_media/should_register.yml
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Tue, 20 Nov 2018 22:53:03 GMT
+      - Sat, 01 Dec 2018 19:01:22 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -35,18 +35,18 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 21fa3f45-672b-4150-af36-0a6511002717
+      - 6af029e9-27f3-4834-bc95-eea6c22b8556
       Etag:
-      - W/"010435b42d87e84fbf8ec010be5e5111"
+      - W/"fe7003dadb89fd7ba794206527b4d711"
       X-Runtime:
-      - '0.028219'
+      - '0.037756'
       X-Powered-By:
-      - Phusion Passenger 5.3.7
+      - Phusion Passenger 6.0.0
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.7
+      - nginx/1.15.7 + Phusion Passenger 6.0.0
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"0000-0000-0000-n06z","type":"media","attributes":{"version":2,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","mediaType":"application/pdf","created":"2018-11-20T22:53:03.000Z","updated":"2018-11-20T22:53:03.000Z"},"relationships":{"doi":{"data":{"id":"10.14454/05MB-Q396","type":"dois"}}}},"included":[{"id":"10.14454/05mb-q396","type":"dois","attributes":{"doi":"10.14454/05mb-q396","identifier":"https://handle.test.datacite.org/10.14454/05mb-q396","creator":[],"titles":[],"publisher":null,"periodical":null,"publicationYear":null,"subjects":[],"contributor":[],"dates":[],"language":null,"types":{"ris":"GEN","bibtex":"misc","citeproc":"article","schemaOrg":"CreativeWork"},"alternateIdentifiers":null,"relatedIdentifiers":null,"sizes":[],"formats":[],"version":null,"rightsList":null,"descriptions":[],"geoLocations":null,"fundingReferences":null,"url":"https://www.datacite.org/roadmap.html","contentUrl":null,"metadataVersion":0,"schemaVersion":null,"source":"mds","isActive":false,"state":"draft","reason":null,"created":"2018-11-19T08:22:09.000Z","registered":null,"updated":"2018-11-20T22:15:32.000Z"},"relationships":{"client":{"data":{"id":"datacite.datacite","type":"clients"}},"media":{"data":[{"id":"0000-0000-0000-n06z","type":"media"},{"id":"0000-0000-0000-n06v","type":"media"}]}}}]}'
+      string: '{"data":{"id":"0000-0000-0000-n07b","type":"media","attributes":{"version":0,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","mediaType":"application/pdf","created":"2018-12-01T14:01:22.000-05:00","updated":"2018-12-01T14:01:22.000-05:00"},"relationships":{"doi":{"data":{"id":"10.14454/05MB-Q396","type":"dois"}}}},"included":[{"id":"10.14454/05mb-q396","type":"dois","attributes":{"doi":"10.14454/05mb-q396","identifier":"https://handle.test.datacite.org/10.14454/05mb-q396","creators":[],"titles":[],"publisher":null,"periodical":null,"publicationYear":null,"subjects":[],"contributors":[],"dates":[],"language":null,"types":{"ris":"GEN","bibtex":"misc","citeproc":"article","schemaOrg":"CreativeWork"},"alternateIdentifiers":null,"relatedIdentifiers":null,"sizes":[],"formats":[],"version":null,"rightsList":null,"descriptions":[],"geoLocations":null,"fundingReferences":null,"url":"https://www.datacite.org/roadmap.html","contentUrl":null,"metadataVersion":0,"schemaVersion":null,"source":"mds","isActive":false,"state":"draft","reason":null,"created":"2018-11-19T03:22:09.000-05:00","registered":null,"updated":"2018-11-20T17:15:32.000-05:00"},"relationships":{"client":{"data":{"id":"datacite.datacite","type":"clients"}},"media":{"data":[{"id":"0000-0000-0000-n07b","type":"media"}]}}}]}'
     http_version: 
-  recorded_at: Tue, 20 Nov 2018 22:53:03 GMT
+  recorded_at: Sat, 01 Dec 2018 19:01:22 GMT
 recorded_with: VCR 3.0.3
