--- a/spec/fixtures/vcr_cassettes/Mediable/list_media/should_list.yml
+++ b/spec/fixtures/vcr_cassettes/Mediable/list_media/should_list.yml
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Tue, 20 Nov 2018 22:52:03 GMT
+      - Sat, 01 Dec 2018 19:01:22 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -35,18 +35,18 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 7bd99687-0631-447a-bce9-7a2a9913b1eb
+      - 4c03ac89-8d16-4d70-8a4a-a499fb1085b0
       Etag:
-      - W/"72bcd0dbef599e98b55e970b35f3b8b4"
+      - W/"6a6f12bde9e94d1eb2f3e33f3813f584"
       X-Runtime:
-      - '0.018373'
+      - '0.023123'
       X-Powered-By:
-      - Phusion Passenger 5.3.7
+      - Phusion Passenger 6.0.0
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.7
+      - nginx/1.15.7 + Phusion Passenger 6.0.0
     body:
       encoding: ASCII-8BIT
-      string: '{"data":[{"id":"0000-0000-0000-n06v","type":"media","attributes":{"version":1,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","mediaType":"application/pdf","created":"2018-11-20T22:15:35.000Z","updated":"2018-11-20T22:15:35.000Z"},"relationships":{"doi":{"data":{"id":"10.14454/05MB-Q396","type":"dois"}}}}],"included":[{"id":"10.14454/05mb-q396","type":"dois","attributes":{"doi":"10.14454/05mb-q396","identifier":"https://handle.test.datacite.org/10.14454/05mb-q396","creator":[],"titles":[],"publisher":null,"periodical":null,"publicationYear":null,"subjects":[],"contributor":[],"dates":[],"language":null,"types":{"ris":"GEN","bibtex":"misc","citeproc":"article","schemaOrg":"CreativeWork"},"alternateIdentifiers":null,"relatedIdentifiers":null,"sizes":[],"formats":[],"version":null,"rightsList":null,"descriptions":[],"geoLocations":null,"fundingReferences":null,"url":"https://www.datacite.org/roadmap.html","contentUrl":null,"metadataVersion":0,"schemaVersion":null,"source":"mds","isActive":false,"state":"draft","reason":null,"created":"2018-11-19T08:22:09.000Z","registered":null,"updated":"2018-11-20T22:15:32.000Z"},"relationships":{"client":{"data":{"id":"datacite.datacite","type":"clients"}},"media":{"data":[{"id":"0000-0000-0000-n06v","type":"media"}]}}}],"meta":{"total":1,"total-pages":1,"page":1},"links":{"self":"https://api.test.datacite.org/dois/10.14454/05MB-Q396/media","next":"https://api.test.datacite.org/media?page%5Bnumber%5D=1"}}'
+      string: '{"data":[{"id":"0000-0000-0000-n07b","type":"media","attributes":{"version":0,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","mediaType":"application/pdf","created":"2018-12-01T14:01:22.000-05:00","updated":"2018-12-01T14:01:22.000-05:00"},"relationships":{"doi":{"data":{"id":"10.14454/05MB-Q396","type":"dois"}}}}],"included":[{"id":"10.14454/05mb-q396","type":"dois","attributes":{"doi":"10.14454/05mb-q396","identifier":"https://handle.test.datacite.org/10.14454/05mb-q396","creators":[],"titles":[],"publisher":null,"periodical":null,"publicationYear":null,"subjects":[],"contributors":[],"dates":[],"language":null,"types":{"ris":"GEN","bibtex":"misc","citeproc":"article","schemaOrg":"CreativeWork"},"alternateIdentifiers":null,"relatedIdentifiers":null,"sizes":[],"formats":[],"version":null,"rightsList":null,"descriptions":[],"geoLocations":null,"fundingReferences":null,"url":"https://www.datacite.org/roadmap.html","contentUrl":null,"metadataVersion":0,"schemaVersion":null,"source":"mds","isActive":false,"state":"draft","reason":null,"created":"2018-11-19T03:22:09.000-05:00","registered":null,"updated":"2018-11-20T17:15:32.000-05:00"},"relationships":{"client":{"data":{"id":"datacite.datacite","type":"clients"}},"media":{"data":[{"id":"0000-0000-0000-n07b","type":"media"}]}}}],"meta":{"total":1,"total-pages":1,"page":1},"links":{"self":"https://api.test.datacite.org/dois/10.14454/05MB-Q396/media","next":"https://api.test.datacite.org/media?page%5Bnumber%5D=1"}}'
     http_version: 
-  recorded_at: Tue, 20 Nov 2018 22:52:03 GMT
+  recorded_at: Sat, 01 Dec 2018 19:01:22 GMT
 recorded_with: VCR 3.0.3
