--- a/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/get_metadata_for_doi.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Tue, 20 Nov 2018 22:16:22 GMT
+      - Sat, 01 Dec 2018 19:02:10 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
@@ -33,19 +33,19 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - d5f441b6-1454-46f9-a39b-20b053c4b6c0
+      - 5b0a2e47-6f72-43d4-a866-876ded0f1f11
       Content-Disposition:
       - attachment; filename=_10.5072_x86n-nm18.xml
       Content-Transfer-Encoding:
       - binary
       Etag:
-      - W/"b0fe91aa23f08f7a2ec57c204c54eb21"
+      - W/"36251fdeba609c1cf3a588354d285c79"
       X-Runtime:
-      - '0.013811'
+      - '0.013918'
       X-Powered-By:
-      - Phusion Passenger 5.3.7
+      - Phusion Passenger 6.0.0
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.7
+      - nginx/1.15.7 + Phusion Passenger 6.0.0
     body:
       encoding: ASCII-8BIT
       string: |
@@ -82,7 +82,7 @@ http_interactions:
             <relatedIdentifier relatedIdentifierType="DOI" relationType="References">10.5438/0012</relatedIdentifier>
             <relatedIdentifier relatedIdentifierType="DOI" relationType="References">10.5438/55e5-t5c0</relatedIdentifier>
           </relatedIdentifiers>
-          <version/>
+          <version>1.0</version>
           <rightsList>
             <rights rightsURI="https://creativecommons.org/licenses/by/4.0/">https://creativecommons.org/licenses/by/4.0/</rights>
           </rightsList>
@@ -91,5 +91,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Tue, 20 Nov 2018 22:16:22 GMT
+  recorded_at: Sat, 01 Dec 2018 19:02:10 GMT
 recorded_with: VCR 3.0.3
