--- a/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata/should_get.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata/should_get.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5438/08a0-3f64
+    uri: https://api.test.datacite.org/dois/10.5438/08a0-3f64
     body:
       encoding: US-ASCII
       string: ''
@@ -19,29 +19,25 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 20:31:57 GMT
+      - Fri, 07 Dec 2018 18:04:51 GMT
       Content-Type:
-      - application/vnd.datacite.datacite+xml
+      - application/vnd.datacite.datacite+xml; charset=utf-8
       Connection:
       - keep-alive
       Status:
       - 200 OK
-      Content-Disposition:
-      - attachment; filename=_10.5438_08a0-3f64.xml
       Cache-Control:
-      - private
+      - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
-      Content-Transfer-Encoding:
-      - binary
       Etag:
       - W/"6e86b6704bc799a8183dd2b5642e623b"
       X-Runtime:
-      - '0.019429'
+      - '0.015217'
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 8312fea7-db8b-4963-98c0-e525decb7168
+      - 934b502e-94e0-4c60-aaf8-e94a340fe839
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
@@ -90,5 +86,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 20:31:57 GMT
+  recorded_at: Fri, 07 Dec 2018 18:04:51 GMT
 recorded_with: VCR 3.0.3
