--- a/spec/fixtures/vcr_cassettes/Metadatable/instance_methods/generate_unique_doi/should_generate_with_shoulder.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/instance_methods/generate_unique_doi/should_generate_with_shoulder.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5072/fk2-003r-j076
+    uri: https://api.test.datacite.org/dois/10.5072/fk2-003r-j076
     body:
       encoding: US-ASCII
       string: ''
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 20:29:03 GMT
+      - Fri, 07 Dec 2018 18:04:53 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -30,10 +30,10 @@ http_interactions:
       - no-cache
       Vary:
       - Accept-Encoding, Origin
-      X-Runtime:
-      - '0.010756'
       X-Request-Id:
-      - 6e6cab7f-a3f8-4534-91a4-392b9cd76055
+      - 1954234f-4ca6-4935-9802-deca7ae2789d
+      X-Runtime:
+      - '0.007710'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
@@ -43,5 +43,5 @@ http_interactions:
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 20:29:03 GMT
+  recorded_at: Fri, 07 Dec 2018 18:04:54 GMT
 recorded_with: VCR 3.0.3
