--- a/spec/fixtures/vcr_cassettes/metadata/metadata_doi_from_xml/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_doi_from_xml/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5438/08a0-3f64
+    uri: https://api.test.datacite.org/dois/10.5438/08a0-3f64
     body:
       encoding: US-ASCII
       string: ''
@@ -19,29 +19,25 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 19:02:07 GMT
+      - Fri, 07 Dec 2018 18:18:04 GMT
       Content-Type:
-      - application/vnd.datacite.datacite+xml
+      - application/vnd.datacite.datacite+xml; charset=utf-8
       Connection:
       - keep-alive
       Status:
       - 200 OK
       Cache-Control:
-      - private
+      - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - fdc566ad-c035-492d-8b66-a4740ef77c73
-      Content-Disposition:
-      - attachment; filename=_10.5438_08a0-3f64.xml
-      Content-Transfer-Encoding:
-      - binary
+      - a7228691-7c2d-43e0-9f2d-7b25cb6ddbb2
       Etag:
       - W/"6e86b6704bc799a8183dd2b5642e623b"
       X-Runtime:
-      - '0.011248'
+      - '0.014531'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
@@ -90,5 +86,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 19:02:07 GMT
+  recorded_at: Fri, 07 Dec 2018 18:18:04 GMT
 recorded_with: VCR 3.0.3
