--- a/spec/fixtures/vcr_cassettes/metadata/metadata_large_file/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_large_file/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5072/ab3v-t139
+    uri: https://api.test.datacite.org/dois/10.5072/ab3v-t139
     body:
       encoding: US-ASCII
       string: ''
@@ -19,29 +19,25 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 19:02:00 GMT
+      - Fri, 07 Dec 2018 18:12:45 GMT
       Content-Type:
-      - application/vnd.datacite.datacite+xml
+      - application/vnd.datacite.datacite+xml; charset=utf-8
       Connection:
       - keep-alive
       Status:
       - 200 OK
       Cache-Control:
-      - private
+      - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - ecb8d851-c42c-4b3b-abf5-e25a4b9d13af
-      Content-Disposition:
-      - attachment; filename=_10.5072_ab3v-t139.xml
-      Content-Transfer-Encoding:
-      - binary
+      - 17332e56-243f-4d5a-9ec4-2ff6e3fa376c
       Etag:
       - W/"ece1f772ca45af0b318d3c106af41063"
       X-Runtime:
-      - '0.259768'
+      - '0.245484'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
@@ -61233,5 +61229,5 @@ http_interactions:
           </geoLocations>
         </resource>
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 19:02:00 GMT
+  recorded_at: Fri, 07 Dec 2018 18:12:45 GMT
 recorded_with: VCR 3.0.3
