--- a/spec/fixtures/vcr_cassettes/metadata/metadata_random_doi/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_random_doi/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5072/003r-j076
+    uri: https://api.test.datacite.org/dois/10.5072/003r-j076
     body:
       encoding: US-ASCII
       string: ''
@@ -19,29 +19,25 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 19:02:09 GMT
+      - Fri, 07 Dec 2018 18:19:23 GMT
       Content-Type:
-      - application/vnd.datacite.datacite+xml
+      - application/vnd.datacite.datacite+xml; charset=utf-8
       Connection:
       - keep-alive
       Status:
       - 200 OK
       Cache-Control:
-      - private
+      - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - ca7fc2e4-0e20-4360-867b-25041fe97976
-      Content-Disposition:
-      - attachment; filename=_10.5072_003r-j076.xml
-      Content-Transfer-Encoding:
-      - binary
+      - f07ce590-130b-4df1-a99d-201d3e5f87b5
       Etag:
       - W/"7c368ecb007dca946daa7b98837be416"
       X-Runtime:
-      - '0.014601'
+      - '0.013525'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
@@ -90,5 +86,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 19:02:09 GMT
+  recorded_at: Fri, 07 Dec 2018 18:19:23 GMT
 recorded_with: VCR 3.0.3
