--- a/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5072/x86n-nm18
+    uri: https://api.test.datacite.org/dois/10.5072/x86n-nm18
     body:
       encoding: US-ASCII
       string: ''
@@ -19,29 +19,25 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 19:02:10 GMT
+      - Fri, 07 Dec 2018 18:10:08 GMT
       Content-Type:
-      - application/vnd.datacite.datacite+xml
+      - application/vnd.datacite.datacite+xml; charset=utf-8
       Connection:
       - keep-alive
       Status:
       - 200 OK
       Cache-Control:
-      - private
+      - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 5b0a2e47-6f72-43d4-a866-876ded0f1f11
-      Content-Disposition:
-      - attachment; filename=_10.5072_x86n-nm18.xml
-      Content-Transfer-Encoding:
-      - binary
+      - dac386ca-e1af-47d3-9402-2c3cb972a530
       Etag:
       - W/"36251fdeba609c1cf3a588354d285c79"
       X-Runtime:
-      - '0.013918'
+      - '0.014025'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
@@ -91,5 +87,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 19:02:10 GMT
+  recorded_at: Fri, 07 Dec 2018 18:10:08 GMT
 recorded_with: VCR 3.0.3
