--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/delete_doi.yml
@@ -15,32 +15,33 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 204
+      code: 404
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 23:01:19 GMT
+      - Fri, 07 Dec 2018 18:13:30 GMT
+      Content-Type:
+      - application/json; charset=utf-8
       Connection:
       - keep-alive
       Status:
-      - 204 No Content
+      - 404 Not Found
       Cache-Control:
       - no-cache
       Vary:
-      - Origin
-      X-Credential-Username:
-      - datacite.datacite
+      - Accept-Encoding, Origin
       X-Request-Id:
-      - 1302d2ec-5085-4d03-9a7a-d374f624e259
+      - 599184e6-e9de-4e34-bb6e-c79dfdd6d03b
       X-Runtime:
-      - '0.031579'
+      - '0.007428'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
       - nginx/1.15.7 + Phusion Passenger 6.0.0
     body:
       encoding: ASCII-8BIT
-      string: ''
+      string: '{"errors":[{"status":"404","title":"The resource you are looking for
+        doesn''t exist."}]}'
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 23:01:19 GMT
+  recorded_at: Fri, 07 Dec 2018 18:13:30 GMT
 recorded_with: VCR 3.0.3
