--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5072/236y-qx15
+    uri: https://api.test.datacite.org/dois/10.5072/236y-qx15
     body:
       encoding: US-ASCII
       string: ''
@@ -15,49 +15,33 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 200
+      code: 404
       message: ''
     headers:
       Date:
-      - Sat, 01 Dec 2018 21:51:50 GMT
+      - Fri, 07 Dec 2018 18:13:29 GMT
       Content-Type:
-      - application/vnd.datacite.datacite+xml
+      - application/json; charset=utf-8
       Connection:
       - keep-alive
       Status:
-      - 200 OK
-      Content-Disposition:
-      - attachment; filename=_10.5072_236y-qx15.xml
+      - 404 Not Found
       Cache-Control:
-      - private
+      - no-cache
       Vary:
       - Accept-Encoding, Origin
-      Content-Transfer-Encoding:
-      - binary
-      Etag:
-      - W/"d2e7e3e09645df86065455bab9db3803"
-      X-Runtime:
-      - '0.018549'
-      X-Credential-Username:
-      - datacite.datacite
       X-Request-Id:
-      - 8e5e670f-1c12-46a1-b6d0-c6ebba625ed1
+      - c381e664-ce74-4116-93b4-7e28c8a2358b
+      X-Runtime:
+      - '0.007326'
       X-Powered-By:
       - Phusion Passenger 6.0.0
       Server:
       - nginx/1.15.7 + Phusion Passenger 6.0.0
     body:
       encoding: ASCII-8BIT
-      string: |
-        <?xml version="1.0" encoding="UTF-8"?>
-        <resource xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://datacite.org/schema/kernel-4" xsi:schemaLocation="http://datacite.org/schema/kernel-4 http://schema.datacite.org/meta/kernel-4/metadata.xsd">
-          <identifier identifierType="DOI">10.5072/236Y-QX15</identifier>
-          <creators/>
-          <titles/>
-          <publisher/>
-          <publicationYear/>
-          <version/>
-        </resource>
+      string: '{"errors":[{"status":"404","title":"The resource you are looking for
+        doesn''t exist."}]}'
     http_version: 
-  recorded_at: Sat, 01 Dec 2018 21:51:50 GMT
+  recorded_at: Fri, 07 Dec 2018 18:13:29 GMT
 recorded_with: VCR 3.0.3
