--- a/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_schema_org/should_delete.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_schema_org/should_delete.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://api.test.datacite.org/dois/10.5438/08a0-3f64
+    uri: https://api.stage.datacite.org/dois/10.5438/08a0-3f64
     body:
       encoding: US-ASCII
       string: ''
@@ -41,6 +41,6 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: ''
-    http_version: 
+    http_version:
   recorded_at: Fri, 07 Dec 2018 18:07:48 GMT
 recorded_with: VCR 3.0.3
