--- a/spec/fixtures/vcr_cassettes/Metadatable/instance_methods/generate_unique_doi/should_generate_with_seed.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/instance_methods/generate_unique_doi/should_generate_with_seed.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/dois/10.5072/003r-j076
+    uri: https://api.stage.datacite.org/dois/10.5072/003r-j076
     body:
       encoding: US-ASCII
       string: ''
@@ -42,6 +42,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
-    http_version: 
+    http_version:
   recorded_at: Fri, 07 Dec 2018 18:04:53 GMT
 recorded_with: VCR 3.0.3
