--- a/spec/fixtures/vcr_cassettes/dois/authentication/wrong_password.yml
+++ b/spec/fixtures/vcr_cassettes/dois/authentication/wrong_password.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/get-url
+    uri: https://api.stage.datacite.org/dois/10.14454/05mb-q396/get-url
     body:
       encoding: US-ASCII
       string: ''
@@ -41,6 +41,6 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"errors":[{"status":"401","title":"Bad credentials."}]}'
-    http_version: 
+    http_version:
   recorded_at: Sat, 01 Dec 2018 19:01:26 GMT
 recorded_with: VCR 3.0.3
