--- a/spec/fixtures/vcr_cassettes/dois/doi/10_5438/0012/get_url_for_doi_not_found.yml
+++ b/spec/fixtures/vcr_cassettes/dois/doi/10_5438/0012/get_url_for_doi_not_found.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/dois/10.5438/0012/get-url
+    uri: https://api.stage.datacite.org/dois/10.5438/0012/get-url
     body:
       encoding: US-ASCII
       string: ''
@@ -42,6 +42,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
-    http_version: 
+    http_version:
   recorded_at: Sat, 01 Dec 2018 19:01:29 GMT
 recorded_with: VCR 3.0.3
