--- a/spec/fixtures/vcr_cassettes/dois/doi/register_url_for_doi_escaped.yml
+++ b/spec/fixtures/vcr_cassettes/dois/doi/register_url_for_doi_escaped.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: put
-    uri: https://api.test.datacite.org/dois/10.14454/05MB-Q396
+    uri: https://api.stage.datacite.org/dois/10.14454/05MB-Q396
     body:
       encoding: UTF-8
       string: '{"data":{"type":"dois","attributes":{"url":"https://www.datacite.org/roadmap.html","should_validate":"true","source":"mds","event":"publish"},"relationships":{"client":{"data":{"type":"clients","id":"DATACITE.DATACITE"}}}}}'
@@ -46,6 +46,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"errors":[{"source":"metadata","title":"Is invalid"},{"source":"metadata","title":"Is
         invalid"}]}'
-    http_version: 
+    http_version:
   recorded_at: Sat, 01 Dec 2018 22:06:17 GMT
 recorded_with: VCR 3.0.3
