--- a/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/no_media_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/no_media_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media
+    uri: https://api.stage.datacite.org/dois/10.14454/05mb-q396/media
     body:
       encoding: US-ASCII
       string: ''
@@ -46,7 +46,7 @@ http_interactions:
       - nginx/1.15.7 + Phusion Passenger 6.0.0
     body:
       encoding: ASCII-8BIT
-      string: '{"data":[],"included":[],"meta":{"total":1,"total-pages":1,"page":1},"links":{"self":"https://api.test.datacite.org/dois/10.14454/05mb-q396/media"}}'
-    http_version: 
+      string: '{"data":[],"included":[],"meta":{"total":1,"total-pages":1,"page":1},"links":{"self":"https://api.stage.datacite.org/dois/10.14454/05mb-q396/media"}}'
+    http_version:
   recorded_at: Sat, 01 Dec 2018 21:45:34 GMT
 recorded_with: VCR 3.0.3
