--- a/spec/fixtures/vcr_cassettes/media/media/10_5072/xxxxxx/doi_not_found.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_5072/xxxxxx/doi_not_found.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/dois/10.5072/xxxxxx/media
+    uri: https://api.stage.datacite.org/dois/10.5072/xxxxxx/media
     body:
       encoding: US-ASCII
       string: ''
@@ -44,6 +44,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
-    http_version: 
+    http_version:
   recorded_at: Sat, 01 Dec 2018 19:01:32 GMT
 recorded_with: VCR 3.0.3
