--- a/spec/fixtures/vcr_cassettes/metadata/metadata_large_file/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_large_file/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/dois/10.5072/ab3v-t139
+    uri: https://api.stage.datacite.org/dois/10.5072/ab3v-t139
     body:
       encoding: US-ASCII
       string: ''
@@ -61228,6 +61228,6 @@ http_interactions:
             </geoLocation>
           </geoLocations>
         </resource>
-    http_version: 
+    http_version:
   recorded_at: Fri, 07 Dec 2018 18:12:45 GMT
 recorded_with: VCR 3.0.3
