--- a/spec/fixtures/vcr_cassettes/metadata/metadata_random_doi/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_random_doi/delete_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://api.test.datacite.org/dois/10.5072/003r-j076
+    uri: https://api.stage.datacite.org/dois/10.5072/003r-j076
     body:
       encoding: US-ASCII
       string: ''
@@ -41,6 +41,6 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: ''
-    http_version: 
+    http_version:
   recorded_at: Sat, 01 Dec 2018 19:02:09 GMT
 recorded_with: VCR 3.0.3
