--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/delete_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://api.test.datacite.org/dois/10.5072/236y-qx15
+    uri: https://api.stage.datacite.org/dois/10.5072/236y-qx15
     body:
       encoding: US-ASCII
       string: ''
@@ -42,6 +42,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
-    http_version: 
+    http_version:
   recorded_at: Fri, 07 Dec 2018 18:13:30 GMT
 recorded_with: VCR 3.0.3
