--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/put_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/put_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: put
-    uri: https://api.test.datacite.org/dois/10.5072/236y-qx15
+    uri: https://api.stage.datacite.org/dois/10.5072/236y-qx15
     body:
       encoding: UTF-8
       string: '{"data":{"type":"dois","attributes":{"doi":"10.5072/236y-qx15","should_validate":"true","source":"mds","event":"publish"},"relationships":{"client":{"data":{"type":"clients","id":"DATACITE.DATACITE"}}}}}'
@@ -45,6 +45,6 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"errors":[{"source":"xml","title":"Can''t be blank"}]}'
-    http_version: 
+    http_version:
   recorded_at: Fri, 07 Dec 2018 18:16:03 GMT
 recorded_with: VCR 3.0.3
