Finish updating github workflows and restructure them similar to other project workflows (lupo)

--- a/.github/workflows/branch_to_staging.yml
+++ b/.github/workflows/branch_to_staging.yml
@@ -1,7 +1,6 @@
-name: Release to Production
+name: Build/Deploy Branch to Staging
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
 jobs:
   test:
     uses: ./.github/workflows/ci.yml
@@ -9,10 +8,13 @@ jobs:
   call_build_and_push:
     needs: test
     uses: ./.github/workflows/build.yml
+    with:
+      image_name: ${{ github.repository }}
+      image_tag: ${{ github.ref_name }}
     secrets: inherit
   deploy:
     needs: [test, call_build_and_push]
     uses: ./.github/workflows/_update_terraform.yml
     with:
-      deployment_environment: production
+      deployment_environment: staging
     secrets: inherit
