--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,13 @@
-name: Test Branch
+name: CI
 on:
-  workflow_dispatch:
-
+  workflow_call:
+    secrets:
+      MDS_USERNAME:
+        required: true
+      MDS_PASSWORD:
+        required: true
+      CC_TEST_REPORTER_ID:
+        required: true
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -27,6 +33,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
       - name: Install
+        env:
+          MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
         run: |
           gem install bundler
           bundle config path vendor/bundle
@@ -38,3 +46,7 @@ jobs:
           # bundle exec rubocop
           bundle exec rspec
           echo $?
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v3.1.1
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
