--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,14 @@ jobs:
   call_build_and_push:
     needs: test
     uses: ./.github/workflows/build.yml
+    with:
+      image_name: ${{ github.repository }}
+      image_tag: ${{ github.ref_name }}
     secrets: inherit
   deploy:
     needs: [test, call_build_and_push]
     uses: ./.github/workflows/_update_terraform.yml
     with:
+      image_tag: ${{ github.ref_name }}
       deployment_environment: production
     secrets: inherit
