--- a/.github/workflows/test_branch.yml
+++ b/.github/workflows/test_branch.yml
@@ -1,8 +1,5 @@
-name: Test Pull Request
+name: Test Branch
 on:
-  pull_request:
-    branches:
-      - master
   workflow_dispatch:
 jobs:
   test:
