--- a/.github/workflows/branch_to_staging.yml
+++ b/.github/workflows/branch_to_staging.yml
@@ -8,10 +8,14 @@ jobs:
   call_build_and_push:
     needs: test
     uses: ./.github/workflows/build.yml
+    with:
+      image_name: ${{ github.repository }}
+      image_tag: main
     secrets: inherit
   deploy:
     needs: [test, call_build_and_push]
     uses: ./.github/workflows/_update_terraform.yml
     with:
+      image_tag: main
       deployment_environment: staging
     secrets: inherit
