--- a/.github/workflows/branch_to_staging.yml
+++ b/.github/workflows/branch_to_staging.yml
@@ -10,12 +10,12 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       image_name: ${{ github.repository }}
-      image_tag: main
+      image_tag: ${{ github.ref_name }}
     secrets: inherit
   deploy:
     needs: [test, call_build_and_push]
     uses: ./.github/workflows/_update_terraform.yml
     with:
-      image_tag: main
+      image_tag: ${{ github.ref_name }}
       deployment_environment: staging
     secrets: inherit
