--- a/spec/fixtures/vcr_cassettes/metadata/metadata_geolocation/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_geolocation/get_metadata_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http:///api.stage.datacite.org/dois/10.14454/fdsrf-232
+    uri: http://api.stage.datacite.org/dois/10.14454/fdsrf-232
     body:
       encoding: US-ASCII
       string: ''
